--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <body>
     <h1 align='center'>Quantas linhas a tabela terá?</h1>
     <form method="post" action="exibir.php">
-        <input type="input" name="quantidade"><br />
+        <input type="input" name="quantidadeLinhas"><br />
+        <input type="input" name="quantidadeColunas"><br />
         <input type="submit" value="enviar">
     </form>
     </body>
